--- a/7feb23/index.css
+++ b/7feb23/index.css
@@ -63,16 +63,27 @@ h1 {
   color: white;
   margin: 20px 0px 20px;
   font-size: 75px;
+  animation-name: moveinleft;
+  animation-duration: 1s;
+  transition: all 0.2s;
 }
 h3 {
   color: white;
   font-size: 25px;
   margin-bottom: 50px;
+  animation-name: moveinright;
+  animation-duration: 1s;
+  transition: all 0.4s;
 }
 h4 {
   color: #fcfc;
   letter-spacing: 2px;
   font-size: 20px;
+}
+.btn-animation {
+  animation-name: moveinbottom;
+  animation-duration: 1s;
+  transition: all 0.4s;
 }
 .newsletter form {
   width: 380px;
@@ -106,9 +117,11 @@ h4 {
   width: 100%;
   padding: 100px 0px;
   background-color: #191919;
+  background-image: url(../7feb23/bg.jpg);
 }
 .about-text {
   width: 550px;
+  transform: translateX(85%);
 }
 
 .about-text h2 {
@@ -130,6 +143,7 @@ h4 {
   line-height: 28px;
   font-size: 18px;
   margin-bottom: 45px;
+  transform: translateX(-10%);
 }
 button {
   background-color: #f9004d;
@@ -137,6 +151,7 @@ button {
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
+  transform: translateX(80%);
   padding: 13px 30px;
   border-radius: 30px;
   transition: 0.4s;
@@ -305,5 +320,43 @@ footer p:nth-child(2) {
     font-size: 20px;
     display: block;
     margin: 20px 0px;
+  }
+}
+@keyframes moveinleft {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  80% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes moveinright {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  80% {
+    transform: translateX(-20px);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes moveinbottom {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
